plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'vacancy_manager'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


application {
    mainModule = 'vacancy_manager.controllers'
    mainClass = 'vacancy_manager.Main'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.2.1')
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--module-path', classpath.asPath]
}


jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    launcher {
        name = 'VacancyManager'
        jvmArgs = [
                '-Dfile.encoding=UTF-8',
                '-Xmx512m',
                '--add-reads', 'vacancy_manager=ALL-UNNAMED',
        ]
    }

    // Явное указание сервисов для слияния
    forceMerge 'postgresql'

    // Упрощенная конфигурация merged модуля
    mergedModule {
        // Убраны дублирующиеся requires
        additive = true
    }

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerType = 'msi'
            installerOptions = [
                    '--copyright', 'Copyright 2024',
                    '--win-menu',
                    '--win-shortcut'
            ]
        } else if (org.gradle.internal.os.OperatingSystem.current().linux) {
            installerType = 'rpm'  // For Fedora/RHEL/CentOS
            // installerType = 'deb'  // For Debian/Ubuntu
            installerOptions = [
                    '--copyright', 'Copyright 2024',
                    '--linux-shortcut'  // Adds a desktop shortcut
            ]
        }
        installerOptions += ['--app-version', version]
    }
}

jlinkZip {
    group = 'distribution'
}